--- a/connector-config.json
+++ b/connector-config.json
@@ -1,11 +1,11 @@
 {
-  "name": "datastax-connector-avro-example2",
+  "name": "datastax-connector-avro-example",
   "config": {
-    "connector.class": "com.datastax.kafkaconnector.DseSinkConnector",
+    "connector.class": "com.datastax.oss.kafka.sink.CassandraSinkConnector",
     "tasks.max": "10",
     "topics": "avro-stream",
-    "contactPoints": "datastax-db",
-    "loadBalancing.localDc": "dc1",
+    "contactPoints": "cassandra",
+    "loadBalancing.localDc": "datacenter1",
     "topic.avro-stream.kafka_examples.avro_udt_table.mapping": "id=key.key, udt_col0=value.segment0,udt_col1=value.segment1,udt_col2=value.segment2,udt_col3=value.segment3,udt_col4=value.segment4,udt_col5=value.segment5,udt_col6=value.segment6,udt_col7=value.segment7,udt_col8=value.segment8,udt_col9=value.segment9",
     "topic.avro-stream.kafka_examples.avro_udt_table.consistencyLevel": "LOCAL_QUORUM"
   }
